# texaform

./: Cargo.toml  README.md  TODO.md
.cargo/: config.toml
assets/: demo.tape
python/: agent.py  characters.py  dog.py  fabricator.py  gather.py  hud.py  lazer_cutter.py  main.py  make.py  smelter.py  utils.py
src/: app.rs  effects.rs  event.rs  lib.rs  logging.rs  main.rs  tail.sh  tcp.rs  tech_tree.rs  theme.rs  tui.rs  utils.rs  websocket.rs
src/agents/: dog.rs  fabricator.rs  hud.rs  laser_cutter.rs  mod.rs  smelter.rs
src/draw/: mod.rs  rectangle.rs
src/entities/: container.rs  mod.rs  properties.rs  shape.rs
src/input/: documentation.rs  load_game.rs  main_menu.rs  mod.rs  pause_menu.rs  save_game.rs  settings.rs  surface.rs  tech_tree.rs
src/puzzles/: count_groups.rs  mod.rs
src/surface/: generation.rs  grid.rs  mod.rs  state.rs  tutorial.rs
src/ui/: documentation.rs  load_game.rs  main_menu.rs  mod.rs  pause_menu.rs  save_game.rs  settings.rs  surface.rs  tech_tree.rs
src/widgets/: button.rs  depreciated_button.rs  list.rs  mod.rs  optional_list.rs  text_box.rs
